force-app/main/default/objects/Movie_Availability__c/Movie_Availability__c.object-meta.xml
<CustomObject>
    <label>Movie Availability</label>
    <nameField>
        <displayFormat>AVAIL-{00000}</displayFormat>
        <label>Availability Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Movie Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>