force-app/main/default/objects/Movie_Availability__c/fields/Availability_Type__c.field-meta.xml
<CustomField>
    <fullName>Availability_Type__c</fullName>
    <label>Availability Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
                <default>true</default>
                <label>Subscription</label>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>