force-app/main/default/objects/Movie_Availability__c/fields/Available_As_Of__c.field-meta.xml
<CustomField>
    <fullName>Available_As_Of__c</fullName>
    <label>Available As Of</label>
    <type>DateTime</type>
</CustomField>