force-app/main/default/objects/Movie_Availability__c/fields/Movie__c.field-meta.xml
<CustomField>
    <fullName>Movie__c</fullName>
    <label>Movie</label>
    <referenceTo>Movie__c</referenceTo>
    <relationshipLabel>Movie Availabilities</relationshipLabel>
    <relationshipName>Movie_Availabilities</relationshipName>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>