force-app/main/default/objects/Movie_Availability__c/fields/Streaming_Service__c.field-meta.xml
<CustomField>
    <fullName>Streaming_Service__c</fullName>
    <label>Streaming Service</label>
    <referenceTo>Streaming_Service__c</referenceTo>
    <relationshipLabel>Movie Availabilities</relationshipLabel>
    <relationshipName>Movie_Availabilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>